--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@varlet/ui": "^1.22.6",
     "autoprefixer": "^10.4.0",
+    "axios": "^0.24.0",
     "vue": "^3.2.13"
   },
   "devDependencies": {
