--- a/package.json
+++ b/package.json
@@ -10,17 +10,27 @@
     "@varlet/ui": "^1.22.6",
     "autoprefixer": "^10.4.0",
     "axios": "^0.24.0",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "amfe-flexible": "^2.2.1",
+    "@vitejs/plugin-vue": "^1.9.0",
+    "vite": "^2.5.10"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^1.9.0",
-    "amfe-flexible": "^2.2.1",
+    "@types/node": "^16.11.6",
+    "@typescript-eslint/eslint-plugin": "^5.3.0",
+    "@typescript-eslint/parser": "^5.3.0",
+    "eslint": "^8.1.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-vue": "^8.0.3",
     "node-sass": "^6.0.1",
     "postcss-pxtorem": "^6.0.0",
+    "prettier": "^2.4.1",
     "sass": "^1.43.4",
     "sass-loader": "^12.3.0",
     "typescript": "^4.4.3",
-    "vite": "^2.5.10",
     "vue-tsc": "^0.3.0"
   }
 }
