--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "sass": "^1.43.4",
     "sass-loader": "^12.3.0",
     "typescript": "^4.4.3",
+    "vue-router": "^4.0.12",
     "vue-tsc": "^0.3.0"
   },
   "config": {
